fixes alignment and missing css files

--- a/src/App.css
+++ b/src/App.css
@@ -1,116 +1,102 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+    height: 40vmin;
+}
+
+.App-header {
+    background-color: #282c34;
+    min-height: 20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .result {
-  height: 40px;
-  background-color: #bbb;
-  width: 100%;
+    height: 40px;
+    background-color: #bbb;
+    width: 100%;
 }
 
 .result p {
-  font-size: 30px;
-  margin: 5px;
+    font-size: 30px;
+    margin: 5px;
 }
 
 .calculator-body {
-  max-width: 180px;
-  margin: 50px;
+    max-width: 180px;
+    margin: 50px;
 }
 
 .button {
-  display: compact;
-  background-color: #bbb;
-  -webkit-transition-duration: 0.4s;
+    display: compact;
+    background-color: #bbb;
+    -webkit-transition-duration: 0.4s;
 
 }
 
-
-.App-header {
-          background-color: #282c34;
-          min-height: 20vh;
-          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-          "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-          sans-serif;
-          -webkit-font-smoothing: antialiased;
-          -moz-osx-font-smoothing: grayscale;
-          background-color: #213406;
-          min-height: 100vh;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          font-size: calc(10px + 2vmin);
-          color: #3eff1b;
-        }
-
-.button {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  width: 25%;
-  height: 30px;
-  font-size: 15px;
+button {
+    width: 25%;
+    height: 30px;
+    font-size: 15px;
 }
 
-.button--trig{
-  width: 33.33%;
-  height: 30px;
-  font-size: 100%;
-  padding: 0.5px;
+.button--trig {
+    width: 33.33%;
+    height: 30px;
+    font-size: 100%;
+    padding: 0.5px;
 }
 
 
 /*.button {*/
-/*  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);*/
+/* box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);*/
 /*}*/
 
 .disabled {
-  opacity:0.6;
-  cursor: not-allowed;
+    opacity: 0.6;
+    cursor: not-allowed;
 }
 
 button:hover span {
-  padding-right: 25px;
+    padding-right: 25px;
 }
 
 button:hover span:after {
-  opacity: 1;
-  right: 0;
+    opacity: 1;
+    right: 0;
 }
 
 button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  /*transition: 0.5s;*/
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    /*transition: 0.5s;*/
 }
 
 button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  /*transition: 0.5s;*/
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    /*transition: 0.5s;*/
 }
 
 .App-link {
-  color: #09d3ac;
+    color: #09d3ac;
 }
-
-button{
-  margin: 5px;
-}
-/*Design inspired from github.com/niinpatel/calculator-react*/
